# auth-2fa

./: .env  Cargo.toml  Makefile  README.md
example/: .env  Cargo.toml
example/src/: main.rs  otp_handlers.rs  service.rs
migrations/: 20240213143016_init.up.sql.sql  20240213183332_init.down.sql.sql
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/: lib.rs  models.rs  otp_handlers.rs  response.rs  schema.rs  service.rs
src/db/: mod.rs
src/db/mongo/: mod.rs  user.rs
src/db/sql/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
