workspace = { members = ["example"] }
[package]
name = "auth-2fa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.5.1"
base32 = "0.4.0"
chrono = { version = "0.4.34", features = ["serde"] }
env_logger = "0.11.1"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
totp-rs = "5.5.1"
uuid = { version = "1.7.0", features = ["v4"] }
tokio = { version = "1.36.0", features = ["net", "macros", "rt-multi-thread", "io-util", "test-util"] }
mongodb = { version = "2.8.0", features = ["default"] }
#sqlx = { version = "0.7.3", features = ["tls-native-tls", "runtime-async-std", "postgres", "sqlite", "mysql", "chrono", "uuid"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
dotenv = "0.15.0"
